--- a/gb/20/8/21/n12348499.md
+++ b/gb/20/8/21/n12348499.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wbcvav387/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wbcvav387/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wbcvav387/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wbcvav387/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wbcvav387/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wbcvav387/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wbcvav387/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wbcvav387/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>打造移居岛 兰屿建置数位3D地形模型</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/991a2a590a6628afc939cc6fb92bd97c-600x400.jpg" />
 <h6>台东县政府举办兰屿高精度数值地形图及3D地形模型成果发表会。（台东县政府提供）
 </h6>
 <hr>
-<p>【大纪元2020年08月21日讯】（大纪元记者龙芳台湾台东报导）台东县政府21日举办<ahref="https://github.com/wbcvav387/djy/blob/master/gb/tag/%E5%85%B0%E5%B1%BF.md#1">兰屿</a>高精度数值地形图及3D地形模型成果发表会，县府地政处长沈碧恕并将镭射水晶内雕兰屿立体地形模型送给县长饶庆铃及原民会，象征台东朝智慧<ahref="https://github.com/wbcvav387/djy/blob/master/gb/tag/%E5%AE%9C%E5%B1%85.md#1">宜居</a>城市迈进。</p>
-<p>县长饶庆铃表示，<ahref="https://github.com/wbcvav387/djy/blob/master/gb/tag/%E5%85%B0%E5%B1%BF.md#1">兰屿</a>因地理隔阂，进行地籍测量交通不便，因此争取离岛建设基金，办理“兰屿乡多目标图籍整合建置计划”，首先完成以利用GPS、RTK等全球卫星定位系统技术，并透过高解析度的航空摄影及先进空载光达技术，建置了兰屿全岛的<ahref="https://github.com/wbcvav387/djy/blob/master/gb/tag/%E6%95%B0%E4%BD%8D.md#1">数位</a>3D地形模型及地形图。</p>
-<p>建设处表示，兰屿成为全台第一个拥有精致3D模型的离岛，藉由3D模型的成果辅助应用于地籍测量、观光导览、土地开发、灾害防治、淹水模拟等多用途。以高解析度正射影制作及数值地形测量作业，测制包含兰屿乡6个部落社区及环岛公路、灯塔、机场、气象站等重要设施，建置全岛拥有最高精度的三维<ahref="https://github.com/wbcvav387/djy/blob/master/gb/tag/%E6%95%B0%E4%BD%8D.md#1">数位</a>地形模型。</p>
+<p>【大纪元2020年08月21日讯】（大纪元记者龙芳台湾台东报导）台东县政府21日举办<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B0%E5%B1%BF.md#1">兰屿</a>高精度数值地形图及3D地形模型成果发表会，县府地政处长沈碧恕并将镭射水晶内雕兰屿立体地形模型送给县长饶庆铃及原民会，象征台东朝智慧<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AE%9C%E5%B1%85.md#1">宜居</a>城市迈进。</p>
+<p>县长饶庆铃表示，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B0%E5%B1%BF.md#1">兰屿</a>因地理隔阂，进行地籍测量交通不便，因此争取离岛建设基金，办理“兰屿乡多目标图籍整合建置计划”，首先完成以利用GPS、RTK等全球卫星定位系统技术，并透过高解析度的航空摄影及先进空载光达技术，建置了兰屿全岛的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%B0%E4%BD%8D.md#1">数位</a>3D地形模型及地形图。</p>
+<p>建设处表示，兰屿成为全台第一个拥有精致3D模型的离岛，藉由3D模型的成果辅助应用于地籍测量、观光导览、土地开发、灾害防治、淹水模拟等多用途。以高解析度正射影制作及数值地形测量作业，测制包含兰屿乡6个部落社区及环岛公路、灯塔、机场、气象站等重要设施，建置全岛拥有最高精度的三维<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%B0%E4%BD%8D.md#1">数位</a>地形模型。</p>
 <p>数值地形建置完成后将可提供工程规划、灾害防治、数位观光、文史研究等各界运用，地籍整合随即逐年完成，透过结合地籍图与数值地形图，全面推动国土基本资料图籍数值化整合建置，除可提升地政资讯网路服务之图籍精度，未来也可加速兰屿原住民族人取得原住民保留地权利赋予的速度，更可提供行政机关各项建设先行规划作业，提高行政效率。</p>
 <p>责任编辑：王愉悦</p>
 
@@ -16,48 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/15/8/30/n4516041.md#1">发展桃园埤塘文化特色 借重英国建筑团队</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/16/12/29/n8642945.md#1">台阳明山中山楼50周年 披露蒋介石过往生活</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/17/5/9/n9122060.md#1">推广GIS国土测绘 台内政部办学生竞赛</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/7/30/n10600285.md#1">三维国家底图建构工程  台内政部今日启动</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/19/11/11/n11647599.md#1">内政部地政业务考评 基市获测量业务精进奖</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/21/n12348581.md#1">推动自主学习 台东数位爱的书库联合启用</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/21/n12347962.md#1">团膳主厨大会师  翻转宜县营养午餐新食代</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/21/n12347572.md#1">基隆纳骨塔改建 林右昌：最快明年底启动</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/20/n12345642.md#1">头城亲子馆开馆 强调健康素养自幼培养</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/20/n12345176.md#1">国民运动中心使用率低 基市议会要求检讨</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/8/30/n4516041.md#1">发展桃园埤塘文化特色 借重英国建筑团队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/29/n8642945.md#1">台阳明山中山楼50周年 披露蒋介石过往生活</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/9/n9122060.md#1">推广GIS国土测绘 台内政部办学生竞赛</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/7/30/n10600285.md#1">三维国家底图建构工程  台内政部今日启动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/11/n11647599.md#1">内政部地政业务考评 基市获测量业务精进奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690757.md#1">宜县新增7名确诊者 连假期间加开筛检时段</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689289.md#1">台东县府送TT守护包 提供居隔者物资关怀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688557.md#1">基隆马拉松、毕旅延办 城博会照原定计划筹备</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688620.md#1">基隆+19例 林右昌：连假筛检站不休息</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688406.md#1">基隆沙湾“时光绘本书屋” 儿童节连假开幕</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132788.md#1" target="_blank">【征文】千百度：上古三代时期的天命观（2）</a></li><li><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/13/n10479888.md#1" target="_blank">王锐：“儿童政治犯”的故事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/16/n12335448.md#1">神秘的中国绝代王后（上）</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/13/n12326957.md#1">孟尝君“狡兔三窟”为何绝子绝孙？</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/16/n12335682.md#1">神秘的中国绝代王后（下）</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/15/n12332674.md#1">美国防部成立特别工作组 专门调查UFO</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/21/n12348254.md#1">【珍言真语】王岸然：临立会阴谋 勿被中共分化</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/21/n12346968.md#1">【十字路口】习李勘灾透玄机 金正恩分权</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/20/n12346451.md#1">【新闻看点】美国给世界出题：三个选择</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/19/n12341810.md#1">港媒爆上海公安局长龚道安被查原因</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/19/n12342506.md#1">央视呛环岛大演习、在台湾上空军演 蔡英文回应</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/18/n12340991.md#1">上海195万党员名单疑外泄 记录详细个资</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/18/n12340885.md#1">成龙曾自曝做假慈善 不惭言论惊呆网友</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/20/n12346158.md#1">发哥批港府罔顾民生 心痛市民遍地开餐像乞丐</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/19/n12343359.md#1">传伊能静将复出拍戏 年过半百拒绝演妈</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/19/n12342056.md#1">小娴认了与金刚交往 同在垦丁冲浪结缘</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/20/n12346785.md#1">女儿在校被说长得丑 陶虹一句安慰获赞有智慧</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/20/n12344064.md#1">3类人最易缺蛋白质 教你正确补充增肌</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/20/n12344925.md#1">小鸟在宾士车筑巢 阿联酋王子护鸟封锁车位</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/19/n12342359.md#1">小行星以史上最近距离飞越地球 NASA没发现</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/19/n12341787.md#1">从太空中才看得到的非洲奇观──撒哈拉之眼</a></li>
-<li><a href="https://github.com/wbcvav387/djy/blob/master/gb/20/8/19/n12342347.md#1">香蕉如何延长保存期限？从选购到冷冻的秘诀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689765.md#1">【远见快评】傅政华双开通报 3大谜团全解析</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wbcvav387/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wbcvav387/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/21/n12348499.htm">打造移居岛 兰屿建置数位3D地形模型</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/21/n12348499.htm">打造移居岛 兰屿建置数位3D地形模型</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/wbcvav387/djy/blob/master/gb/20/8/21/n12348499.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wbcvav387/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wbcvav387/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wbcvav387/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wbcvav387/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbcvav387/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/8/21/n12348499.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
